Fix #113: Replace +/- by triangle for collapse icon.

--- a/style/annotations/list.less
+++ b/style/annotations/list.less
@@ -48,6 +48,12 @@
             .box-shadow(0px,0px,4px,darken(@color1,30%));
             .inset-box-shadow(0px,0px,4px,darken(@color1,50%));
         }
+
+        .collapse i{
+            float: left;
+            margin-right: 5px;
+            margin-left: 5px;
+        }
         
         span.text{
             display: block;
